chore: align vercel config with repo root

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
+  "framework": null,
   "builds": [
     {
-      "src": "chatgpt/to-do-list/**/*",
+      "src": "index.html",
       "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "chatgpt/to-do-list/$1"
     }
   ]
 }
